Fix rounded corner of card using overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,7 @@
 .meal {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 1.1rem;
+  overflow: hidden;
 }
 
 .meal-tags {
